k8s/etcd.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-client
  labels:
    app: etcd
spec:
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  selector:
    app: etcd
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
  labels:
    app: etcd
spec:
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  - name: peer
    port: 2380
    protocol: TCP
    targetPort: 2380
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: etcd
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
spec:
  serviceName: etcd
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:v3.5.0
        command:
          - etcd
          - --name=etcd
          - --data-dir=/var/run/etcd/default.etcd
          - --advertise-client-urls=http://etcd-client:2379
          - --listen-client-urls=http://0.0.0.0:2379
          - --initial-advertise-peer-urls=http://127.0.0.1:2380
          - --listen-peer-urls=http://0.0.0.0:2380
          - --initial-cluster=etcd=http://127.0.0.1:2380
        ports:
        - containerPort: 2379
          name: client
        - containerPort: 2380
          name: peer
        readinessProbe:
          exec:
            command:
            - etcdctl
            - endpoint
            - health
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          exec:
            command:
            - etcdctl
            - endpoint
            - health
          initialDelaySeconds: 15
          periodSeconds: 10
        volumeMounts:
        - name: etcd-data
          mountPath: /var/run/etcd
  volumeClaimTemplates:
  - metadata:
      name: etcd-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 500Mi
