k8s/nestapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestapp
  labels:
    app: nestapp
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: nestapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nestapp
  template:
    metadata:
      labels:
        app: nestapp
    spec:
      containers:
      - name: nestapp
        image: hydradb-nestapp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
