k8s/pg-primary.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-primary
  labels:
    app: pg-primary
spec:
  publishNotReadyAddresses: true
  ports:
  - port: 5432
    name: postgres
  - port: 8008
    name: restapi
  selector:
    app: pg-primary
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-primary
spec:
  serviceName: pg-primary
  replicas: 1
  selector:
    matchLabels:
      app: pg-primary
  template:
    metadata:
      labels:
        app: pg-primary
    spec:
      containers:
      - name: postgres
        image: hydradb-postgres:latest # To be built locally
        imagePullPolicy: Never
        ports:
        - containerPort: 5432
        - containerPort: 8008
        readinessProbe:
          httpGet:
            path: /read-only
            port: 8008
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8008
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        - name: config
          mountPath: /etc/patroni/patroni.yml
          subPath: patroni.yml
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: patroni-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
