k8s/pg-replica.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-replica
  labels:
    app: pg-replica
spec:
  ports:
  - port: 5432
    name: postgres
  - port: 8008
    name: restapi
  selector:
    app: pg-replica
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-replica
spec:
  serviceName: pg-replica
  replicas: 1
  selector:
    matchLabels:
      app: pg-replica
  template:
    metadata:
      labels:
        app: pg-replica
    spec:
      containers:
      - name: postgres
        image: hydradb-postgres:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5432
        - containerPort: 8008
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        - name: config
          mountPath: /etc/patroni/patroni.yml
          subPath: patroni.yml
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: patroni-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
