k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hydradb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # Tuning for performance
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nest(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nestapp
            port:
              number: 3000
      - path: /go(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: goapp
            port:
              number: 8080
